# jcake-app-template

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  build.js  index.html  lib.d.ts  manifest.json  package.json  tsconfig.json
app/: form.tsx  header.tsx  help.tsx  main.tsx  markdown.tsx  modal.tsx  router.tsx  status.tsx  svg.tsx  util.tsx
app/lib/: api.ts  debounce.ts
common/: Cargo.toml
common/src/: args.rs  config.rs  debounce.rs  error.rs  lib.rs  resolve_homedir.rs
css/: button.css  checkbox.css  file-picker.css  generic.css  main.css  misc.css  mobile.css  modal.css  notification.css  table.css  tabs.css  textedit.css  theme.css  utility.css
src/: main.rs
