[package]
name = "template"
version = "0.0.1"
edition = "2024"

[dependencies]
env_logger = { version = "0.11.8" }
log = { version = "0.4.28" }
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = []

[workspace]
members = ["common"]
